--- a/css/style.css
+++ b/css/style.css
@@ -9,6 +9,18 @@ body {
     font-size: 16px;
     background-color: #fff;
     overflow: hidden;
+    background-image: url('https://images.unsplash.com/photo-1492827016231-736013acccc0?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=2070&q=80');
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-attachment: fixed;
+}
+
+.container__header{
+    height: 20%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin: 50px;
 }
 
 h1 {
@@ -16,7 +28,7 @@ h1 {
 }
 
 .container {
-    height: 100vh;
+    height: 80%;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -34,18 +46,25 @@ h1 {
     margin: 20px 0;
 }
 
-.box {
-    height: 150px;
-    width: 150px;
+.container .box {
+    height: 400px;
+    width: 400px;
     border: solid 3px #ccc;
     margin: 10px;
     position: relative;
-
     
+    /* Estilos del item en las cajas */
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
+    align-content: center;
+    flex-wrap: wrap;
+}
+
+.subtitle{
+    align-self: flex-start;
+    margin-top: 5px;
 
 }
 
@@ -59,7 +78,8 @@ h1 {
     height: 75px;
     width: 75px;
     object-fit: cover;
-    font-weight: bold; 
+    font-weight: bold;
+    cursor: move; 
 }
 
 .hide {
